# am_split

./: Makefile.am  README.md  config.site  configure.ac.in  create_configure_ac.sh  create_translate_sh.sh  project.txt  run_me_once.sh  translate.sh.in
lib/: Makefile.am
po/: am_split.po  am_split.po.old
src/: Makefile.am  main.c
